--- a/css/carousel.css
+++ b/css/carousel.css
@@ -83,6 +83,7 @@ body {
 
 .featurette-divider {
   margin: 80px 0; /* Space out the Bootstrap <hr> more */
+  border-color: #9a9a9a;
 }
 
 /* Thin out the marketing headings */
