--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li {% if (page.title === "Taft Prep Homepage") %} class="active" {% endif %}><a href="index.html">Home</a></li>
-                <li {% if (page.title === "Meet our tutors") %} class="active" {% endif %}><a href="about.html">Meet our Tutors</a></li>
-                <li {% if (page.title === "Contact us") %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
+                <li {% if (page.title == "Taft Prep Homepage") %} class="active" {% endif %}><a href="index.html">Home</a></li>
+                <li {% if (page.title == "Meet our tutors") %} class="active" {% endif %}><a href="about.html">Meet our Tutors</a></li>
+                <li {% if (page.title == "Contact us") %} class="active" {% endif %}><a href="contact.html">Contact</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="navbar-text">Call Us: 555-555-5555</li>
