Test base.url change site.url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <title>{{ page.title }}</title>
 
     <!-- CSS -->
-    <link href="{{ base.url }}/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/carousel.css"> -->
     <link href="{{ base.url }}/css/custom.css" rel="stylesheet">
     <link href="{{ base.url }}/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
