--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <title>{{ page.title }}</title>
 
     <!-- CSS -->
-    <link href="{{ base.url }}/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/carousel.css"> -->
-    <link href="{{ base.url }}/css/custom.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
     <link href="{{ base.url }}/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
