--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/carousel.css"> -->
     <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
-    <link href="{{ base.url }}/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="{{ base.url }}/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -71,10 +71,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-    <script src="{{ base.url }}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="{{ site.baseurl }}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
-    <script src="{{ base.url }}/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{ base.url }}/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
+    <script src="{{ site.baseurl }}/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
   </body>
 </html>
