CSS change for background on mobile browser.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Home page of Taft Prep School offering test preparation for standardized tests including SAT, ACT and graduate school entrance exams. Taft Prep also provides private tutoring and college admissions counseling.">
+    <meta name="description" content="Tutoring company specializing in ADD tutoring, ADHD tutoring, private tutoring, learning disability, learning difficulties, nyc tutoring, nyc private tutoring, top nyc tutors, best nyc tutors, elementary school tutor.">
     <meta name="author" content="techargonauts.com">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
@@ -52,16 +52,6 @@
     </nav>
 
     {{ content }}
-
-
-      <!-- FOOTER -->
-      <!-- <footer class="footer">
-        <div class="container">
-          <hr>
-          <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 Taft Prep</p>
-        </div>
-      </footer> -->
 
     <!-- Javascript
     ================================================== -->
