--- a/css/custom.css
+++ b/css/custom.css
@@ -8,14 +8,30 @@
   padding-top: 40px;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('../assets/img/bg.png') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background: url('../assets/img/bg.png') no-repeat center center fixed;
+  /*background: url('../assets/img/bg.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  -o-background-size: cover;
+  -o-background-size: cover;*/
 }
 
 .navbar .container-fluid, .navbar-collapse {
