--- a/css/custom.css
+++ b/css/custom.css
@@ -1,13 +1,3 @@
-.navbar {
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    border-radius: 0 !important;
-}
-
-.spacing {
-  padding-top: 40px;
-}
-
 body:before {
   content: "";
   display: block;
@@ -29,18 +19,29 @@ body {
   padding-bottom: 40px;
 }
 
-.navbar .container-fluid, .navbar-collapse {
-    padding-left:0;
+.navbar {
+    -webkit-border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    border-radius: 0 !important;
 }
-.navbar-collapse.in {
-    padding-left:30px;
+
+.spacing {
+  padding-top: 40px;
+}
+
+.navbar-brand {
+  display: none;
+}
+
+.navbar .container-fluid, .navbar-collapse {
+    padding-left:40px;
 }
 
 .navbar-nav>li {
       float: none;
+      font-weight: bold;
 }
 
-/*  clear bootstrap header colors */
 .navbar-default {
     background-color: white;
     border-color: white;
