--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Tutoring company specializing in ADD tutoring, ADHD tutoring, private tutoring, learning disability, learning difficulties, nyc tutoring, nyc private tutoring, top nyc tutors, best nyc tutors, elementary school tutor.">
     <meta name="author" content="techargonauts.com">
-    <!-- <link rel="icon" href="favicon.ico"> -->
+    <link rel="icon" href="favicon.ico">
 
     <title>{{ page.title }}</title>
 
